--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
         "express-session": "~1.17.2",
         "helmet": "^3.18.0",
         "morgan": "~1.9.0",
-        "mysql": "~2.18.1",
+        "mysql2": "^2.3.3",
         "nodemailer": "^4.6.8",
         "serve-favicon": "~2.4.5",
         "socket.io": "^2.1.1",
